--- a/about.html
+++ b/about.html
@@ -32,13 +32,11 @@
 </head>
 <body>
 
-  <!-- Navigation (brand goes Home) -->
-  <nav class="top" aria-label="Primary">
-    <div class="inner container" style="padding-left:1rem;padding-right:1rem;">
-      <a href="index.html" class="brand">🦁 Sovereign Academy</a>
-    </div>
-  </nav>
-
+<header class="site container"> 
+<div class="brand">Sovereign Academy</div> <nav class="top"> 
+<a href="index.html" class="nav-home">Home</a> </nav> 
+</header>
+ 
   <!-- Site notice -->
   <div role="status" style="background-color:#fff8dc; color:#444; padding:15px; text-align:center; font-weight:bold; border-bottom:2px solid #ccc;">
     🚧 Sovereign Academy is under active construction — but we're already live and ready to help! Check back often for new topics and tools. 💪
