--- a/ada-complaint.html
+++ b/ada-complaint.html
@@ -77,9 +77,10 @@
 <body id="ada-complaint-page">
 
 <!-- Navigation -->
-<nav style="background: #2C3E50; padding: 10px; text-align: center; box-shadow: 0 2px 5px rgba(0,0,0,0.2);">
-  <a href="index.html" style="color: white; margin: 0 15px;">🏠 Home</a>
-</nav>
+<header class="site container"> 
+<div class="brand">Sovereign Academy</div> <nav class="top"> 
+<a href="index.html" class="nav-home">Home</a> </nav> 
+</header>
 
 <h1>Americans with Disabilities Act (ADA) Rights</h1>
 <p>If you have a disability, you have civil rights under federal law. The ADA protects access to employment, education, public services, and housing — nationwide.</p>
