--- a/arrested.html
+++ b/arrested.html
@@ -36,9 +36,10 @@
 
 <body>
   <!-- Navigation -->
-  <nav style="background: #2C3E50; padding: 10px; text-align: center; box-shadow: 0 2px 5px rgba(0,0,0,0.2);">
-    <a href="index.html" style="color: white; margin: 0 15px;">🏠 Home</a>
-  </nav>
+<header class="site container"> 
+<div class="brand">Sovereign Academy</div> <nav class="top"> 
+<a href="index.html" class="nav-home">Home</a> </nav> 
+</header>
 
   <main>
     <h1>What to Do If You're Arrested</h1>
