--- a/about.html
+++ b/about.html
@@ -89,4 +89,11 @@
     })();
   </script>
 </body>
+  </div> 
+<div class="footer-disclaimer"> 
+Sovereign Academy and Ask Sage provide educational resources only.<br /> We are not attorneys and this is not legal advice.<br /> 
+Always consult a licensed attorney for legal matters. 
+</div>
+</footer>
+
 </html>
