--- a/about.html
+++ b/about.html
@@ -32,12 +32,10 @@
 </head>
 <body>
 
-  <!-- Home-only nav -->
-  <nav class="top" aria-label="Primary">
-    <div class="inner container" style="padding-left:1rem;padding-right:1rem;">
-      <a href="index.html" class="brand">🦁 Sovereign Academy</a>
-    </div>
-  </nav>
+<header class="site container"> 
+<div class="brand">Sovereign Academy</div> <nav class="top"> 
+<a href="index.html" class="nav-home">Home</a> </nav> 
+</header>
 
   <!-- Site notice -->
   <div role="status" style="background-color:#fff8dc; color:#444; padding:15px; text-align:center; font-weight:bold; border-bottom:2px solid #ccc;">
