--- a/ada-complaint.html
+++ b/ada-complaint.html
@@ -165,6 +165,11 @@
 </script>
 
 <footer>
+  <div class="footer-disclaimer">
+Sovereign Academy and Ask Sage provide educational resources only.<br />
+We are not attorneys and this is not legal advice.<br />
+Always consult a licensed attorney for legal matters.
+  </div>
   © 2025 Sovereign Academy — Built by the people, powered by Sage AI. You are not alone.
 </footer>
 
