--- a/conspiracy-defense.html
+++ b/conspiracy-defense.html
@@ -31,9 +31,10 @@
 
 <body>
   <!-- Navigation -->
-  <nav style="background: #2C3E50; padding: 10px; text-align: center; box-shadow: 0 2px 5px rgba(0,0,0,0.2);">
-    <a href="index.html" style="color: white; margin: 0 15px;">🏠 Home</a>
-  </nav>
+<header class="site container"> 
+<div class="brand">Sovereign Academy</div> <nav class="top"> 
+<a href="index.html" class="nav-home">Home</a> </nav> 
+</header>
 
   <main>
     <h1 style="color:#b22222; text-align:center; margin-top:1.5rem">🚨 Conspiracy Charges Are Bullsh*t</h1>
