--- a/dss-stratagy-tools.html
+++ b/dss-stratagy-tools.html
@@ -48,17 +48,10 @@
 </head>
 <body>
   <!-- Top Nav (standard, no Topics) -->
-  <nav class="top" aria-label="Primary">
-    <div class="inner container" style="padding-left:1rem;padding-right:1rem;">
-      <a href="index.html" class="brand">🦁 Sovereign Academy</a>
-      <div class="links" role="navigation">
-        <a href="dss-defense.html">DSS & CPS Defense</a>
-        <a href="download-hub.html">Download Hub</a>
-        <a href="court-prep.html">Court Prep</a>
-        <a href="courtroom-scripts.html">Courtroom Scripts</a>
-      </div>
-    </div>
-  </nav>
+<header class="site container"> 
+<div class="brand">Sovereign Academy</div> <nav class="top"> 
+<a href="index.html" class="nav-home">Home</a> </nav> 
+</header>
 
   <!-- Hero -->
   <header class="hero" role="banner">
