--- a/sue-cps-federal.html
+++ b/sue-cps-federal.html
@@ -15,7 +15,7 @@
 
   <!-- 🔗 Core Assets -->
   <link rel="manifest" href="manifest.json" />
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
 
