--- a/how-to-read-docket.html
+++ b/how-to-read-docket.html
@@ -14,7 +14,7 @@
   <meta name="twitter:description" content="Learn how to read your docket, find key details, and track your legal case like a pro."/>
 
   <link rel="manifest" href="manifest.json"/>
-  <link rel="stylesheet" href="css/style.css"/>
+  <link rel="stylesheet" href="css/styles.css"/>
   <script defer src="smart-search.js"></script>
   <script defer src="voice-search.js"></script>
 </head>
@@ -22,9 +22,10 @@
 
 
 <!-- Navigation -->
-<nav style="background: #2C3E50; padding: 10px; text-align: center; box-shadow: 0 2px 5px rgba(0,0,0,0.2);">
-  <a href="index.html" style="color: white; margin: 0 15px;">🏠 Home</a>
-</nav>
+<header class="site container"> 
+<div class="brand">Sovereign Academy</div> <nav class="top"> 
+<a href="index.html" class="nav-home">Home</a> </nav> 
+</header>
 
 <main>
   <h1>🧾 How to Read a Court Docket or Case File</h1>
