--- a/fix-your-case-timeline.html
+++ b/fix-your-case-timeline.html
@@ -14,7 +14,7 @@
   <meta name="twitter:description" content="From first notice to trial — a roadmap for self-represented warriors."/>
 
   <link rel="manifest" href="manifest.json"/>
-  <link rel="stylesheet" href="css/style.css"/>
+  <link rel="stylesheet" href="css/styles.css"/>
   <script defer src="smart-search.js"></script>
   <script defer src="voice-search.js"></script>
 </head>
