--- a/how-to-read-docket.html
+++ b/how-to-read-docket.html
@@ -14,7 +14,7 @@
   <meta name="twitter:description" content="Learn how to read your docket, find key details, and track your legal case like a pro."/>
 
   <link rel="manifest" href="manifest.json"/>
-  <link rel="stylesheet" href="css/styles.css"/>
+  <link rel="stylesheet" href="styles.css"/>
   <script defer src="smart-search.js"></script>
   <script defer src="voice-search.js"></script>
 </head>
